# charade

./: .gitignore  .travis.yml  CONTRIBUTORS  LICENSE  README.md  charade.cabal  charade.cfg  stack.yaml  titles.txt
snaplets/heist/: index.tpl
src/: .Charade.hs.swp  Charade.hs
src/Heist/: Charade.hs
templates/: _base.tpl  base.tpl  index.tpl  test.md
