name:           charade
version:        0.1
synopsis:       Auto-generation of HTML content
description:
    This package makes it easy to create mockup websites for rapid prototyping
    using Heist and Snap.

license:        BSD3
license-file:   LICENSE
author:         Doug Beardsley
maintainer:     doug.beardsley@soostone.com
build-type:     Simple
cabal-version:  >= 1.8
homepage:       https://github.com/Soostone/charade
category:       Web

extra-source-files:
  CONTRIBUTORS,
  LICENSE,
  README.md

Library
  hs-source-dirs: src

  exposed-modules:
    Heist.Charade

  build-depends:
    base                >= 4       && < 5,
    heist               >= 0.11    && < 0.12,
    xmlhtml             >= 0.2     && < 0.3

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

Executable charade
  hs-source-dirs: src
  main-is: Charade.hs

  build-depends:
    QuickCheck          >= 2.5     && < 2.6,
    base                >= 4       && < 5,
    configurator        >= 0.2     && < 0.3,
    lens                >= 3.8     && < 3.9,
    heist               >= 0.11    && < 0.12,
    random              >= 1.0     && < 1.1,
    snap                >= 0.11    && < 0.12,
    snap-server         >= 0.9     && < 0.11,
    text                >= 0.11    && < 0.12,
    xmlhtml             >= 0.2     && < 0.3

  ghc-prof-options: -prof -auto-all

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

source-repository head
  type:     git
  location: https://github.com/Soostone/charade.git
